# stm-dev

./: .clangd  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md
source/: .mxproject  CMakeLists.txt  Makefile  STM32L432KCUx_FLASH.ld  STM32L4Q5CGTx_FLASH.ld  stm-dev.ioc
source/App/: LED_heartbeat_thread.hpp  cli_thread.cpp  cli_thread.hpp  sensor.cpp  sensor.hpp  thread_example.cpp  thread_example.hpp  tinyusb_thread.hpp
source/Core/Inc/: FreeRTOSConfig.h  main.h  main.hpp  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tusb_config.h
source/Core/Src/: freertos.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  usb_descriptors.c
source/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  usbd_conf.h
source/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  usbd_conf.c  usbd_desc.c
test/: CMakeLists.txt  test_sensor.cpp
